--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
         <link rel="stylesheet" href="./game.css">
-        <script type="text/javascript" src="./game.js"></script>
-        <title>Out cool website</title>
+        <script type="text/javascript" src=".game.js"></script>
+        <title>Our cool website</title>
     </head>
     <body>
         <main>
