uses async button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button id="use-promise" class="pure-button">Use a promise</button>
                 <button id="use-async-await" class="pure-button">Use async/await</button>
             </div>
-            <div id="score"></div>
+            <div id="score">0</div>
             <div id="category-title"></div>
             <div id="question"></div>
             <div id="value"></div>
