Finished the basic project

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <form class="pure-form">
                 <textarea id="player-response" class="pure-input-1"></textarea>
             </form>
-            <button id="check-response" class="pure-button">Check response</button>
-            <div id="answer"></div>
+            <button id="check-response" class="pure-button is-hidden">Check response</button>
+            <div id="answer" class="is-hidden"></div>
         </main>
     </body>
 </html>
